--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,13 +6,12 @@ pymongo==4.6.3
 jq==1.6.0
 
 python-multipart==0.0.7
-python-jose[cryptography]==3.3.0
-passlib==1.7.4
-bcrypt==4.0.1
+PyJWT[crypto]==2.8.0
+passlib[bcrypt]==1.7.4
 
 # dev
 pytest-cov==4.0.0
 pytest==7.4.2
 pylint==3.0.0
-requests==2.31.0
+requests==2.32.3
 yapf==0.40.2
