Updated python docker images to gracefuly stop since they now start in the primary process in a container, through taking over execution of the entrypoint script via a command; Increased python-multipart pacakge version to avoid vulnerability; increased eslint's version to remove dependency which has vulnerability; this required upgrading the eslint configuration within rosalution to use the new flat file configuration.  It is temporarily tuned to be close to the existing code base linting however, the team will review and revise linting guidelines when we gather soon.

--- a/docker-compose.local-production.yml
+++ b/docker-compose.local-production.yml
@@ -52,7 +52,7 @@ services:
     environment:
       - ROSALUTION_ENV=production
       - MONGODB_HOST=rosalution-db
-    entrypoint: ['/bin/sh', '-c', './entrypoint-init.sh']
+    command: ['./etc/entrypoint-init.sh']
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=rosalution-network"
