--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "build": "vite build",
     "dev": "vite",
     "dev:host": "vite --host 0.0.0.0 --port 80",
-    "lint": "eslint --ext .js,.vue ./",
-    "lint:auto": "eslint --ext .js,.vue ./ --fix",
+    "lint": "eslint ./",
+    "lint:auto": "eslint ./ --fix",
     "serve": "vite preview",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
@@ -25,16 +25,17 @@
     "vue-router": "4.2.5"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "2.12.1",
     "@vitejs/plugin-vue": "5.1.4",
-    "@vitest/coverage-v8": "2.1.1",
-    "@vitest/ui": "2.1.1",
+    "@vitest/coverage-v8": "v3.0.0-beta.2",
+    "@vitest/ui": "v3.0.0-beta.2",
     "@vue/test-utils": "2.4.1",
-    "eslint": "8.50.0",
-    "eslint-config-google": "0.14.0",
-    "eslint-plugin-vue": "9.17.0",
-    "happy-dom": "14.12.3",
+    "eslint": "9.16.0",
+    "eslint-plugin-vue": "9.32.0",
+    "happy-dom": "15.10.2",
     "sinon": "19.0.2",
     "vite": "5.4.8",
-    "vitest": "2.1.1"
+    "vitest": "v3.0.0-beta.2"
+    
   }
 }
